<!-- modal_layout.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opciones"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnPrueba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ponerme_a_prueba" />

    <Button
        android:id="@+id/btnVer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ver_fichas" />

    <Button
        android:id="@+id/btnCerrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cerrar" />

</LinearLayout>