<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroungLogo"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/fichas"
            android:textAlignment="center"
            android:textSize="24sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnCrearFicha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/oxfordBlue"
        android:text="@string/nuevaFicha" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFichas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/txtMensaje"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="23dp"
            android:text="@string/ninguna_ficha"
            android:textAlignment="center"
            android:textSize="16sp"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>