<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroungLogo"
        android:padding="20dp">

        <ImageButton
            android:id="@+id/btnRegresar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@android:color/transparent"
            android:padding="8dp"
            android:src="@drawable/baseline_arrow_circle_left_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Quiz Quest"
            android:textAlignment="center"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="16dp">


        <EditText
            android:id="@+id/editTextAnverso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/anverso"
            android:minLines="3" />

        <EditText
            android:id="@+id/editTextEnverso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextAnverso"
            android:layout_marginBottom="16dp"
            android:hint="@string/enverso"
            android:minLines="3" />

        <EditText
            android:id="@+id/editTextPistas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextEnverso"
            android:layout_marginBottom="16dp"
            android:hint="@string/palabras_clave"
            android:minLines="3" />

        <Button
            android:id="@+id/buttonGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextPistas"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/green"
            android:text="@string/guardar_cambios" />

        <Button
            android:id="@+id/buttonCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonGuardar"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/charcoal"
            android:text="@string/cancelar" />
    </RelativeLayout>
</LinearLayout>
